--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN=MTEwNzYyNzg1MTgxNTA1OTQ3Nw.GfgBhH.EY0uyGNiZqqV4rsUwfQoLWvl8gH7jK2eBABM3o
+TOKEN=MTEwNzYyNzg1MTgxNTA1OTQ3Nw.GRRUdW.WbjCNYl8Bf-M-0KgaOfxTdeJfKwzCow8JPilNk
