--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-
-TOKEN=MTEwNzYyNzg1MTgxNTA1OTQ3Nw.GRRUdW.WbjCNYl8Bf-M-0KgaOfxTdeJfKwzCow8JPilNk
+TOKEN=MTEwNzYyNzg1MTgxNTA1OTQ3Nw.GvV-M7.YMMrRqVZEnh4BQtGkQ0ck8TfikqighX8toootw
